--- a/bibfiles/V374Peg.bib
+++ b/bibfiles/V374Peg.bib
@@ -1,3 +1,22 @@
+@ARTICLE{Bellotti_2025arXiv251109312B,
+       author = {{Bellotti}, S. and {Cristofari}, P.~I. and {Callingham}, J.~R. and {Morin}, J. and {Petit}, P. and {Vidotto}, A.~A. and {Jardine}, M. and {Arnold}, L. and {Kavanagh}, R.~D. and {Llama}, J. and {Vedantham}, H.},
+        title = "{A magnetic field study of two fast-rotating, radio bright M dwarfs. StKM 1-1262 and V374 Peg}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics},
+         year = 2025,
+        month = nov,
+          eid = {arXiv:2511.09312},
+        pages = {arXiv:2511.09312},
+          doi = {10.48550/arXiv.2511.09312},
+archivePrefix = {arXiv},
+       eprint = {2511.09312},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251109312B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Greimel_1998IBVS.4652....1G,
        author = {{Greimel}, R. and {Robb}, R.~M.},
         title = "{Flares Discovered on 1RXS J220111+281849}",
